Bug 499104 - Crash when opening settings
Summary: Crash when opening settings
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2025-01-24 19:44 UTC by Nicolas Fella
Modified: 2025-02-08 03:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/123305/events/df90862c79734e87a9a578fa0e377176/


Attachments
New crash information added by DrKonqi (101.48 KB, text/plain)
2025-01-24 19:44 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2025-01-24 19:44:48 UTC
Application: plasma-discover (6.3.80)
 (Compiled from sources)
ApplicationNotResponding [ANR]: false
Qt Version: 6.9.0
Frameworks Version: 6.11.0
Operating System: Linux 6.12.9-200.fc41.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 41 (KDE Plasma)"
DrKonqi: 6.3.80 [CoredumpBackend]

-- Information about the crash:
- Open discover
- While it's loading change to "Settings"

The crash can be reproduced every time.

-- Backtrace (Reduced):
#5  QSet<QString>::begin (this=0x58) at /home/nico/kde/usr/include/QtCore/qset.h:141
#6  PackageKitBackend::isPackageNameUpgradeable (this=0x0, resource=resource@entry=0x7f1f78004ce0) at /home/nico/kde/src/discover/libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp:1090
#7  0x00007f20300b485b in PackageKitResource::state (this=0x7f1f78004ce0) at /home/nico/kde/src/discover/libdiscover/backends/PackageKitBackend/PackageKitResource.cpp:213
#8  0x00007f20300b1049 in needsResolveFilter (result=...) at /home/nico/kde/src/discover/libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp:616
#9  kFilter<QList<StreamResult>, QList<StreamResult>, bool (*)(StreamResult const&)> (op=<optimized out>, input=...) at /home/nico/kde/src/discover/libdiscover/utils.h:86


Reported using DrKonqi
Comment 1 Nicolas Fella 2025-01-24 19:44:49 UTC
Created attachment 177651 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Bug Janitor Service 2025-01-25 11:34:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1015
Comment 3 Harald Sitter 2025-02-03 17:21:42 UTC
Git commit 8a0e1c39f2430f8bf2a2ceaba489d21081648419 by Harald Sitter, on behalf of Aleix Pol.
Committed on 03/02/2025 at 12:08.
Pushed by apol into branch 'master'.

pk: Use QFutureWatcher instead of QCoro::Task::then()

We want to ensure the result is treated in the backend's thread.

M  +3    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/8a0e1c39f2430f8bf2a2ceaba489d21081648419