pk: Use QFutureWatcher instead of QCoro::Task::then()

We want to ensure the result is treated in the backend's thread.

BUG: 499104